BACKLOG-1557: Cleanup unused caches and cache providers(reference cache and cluster) http://jira.jahia.org/browse/BACKLOG-1557
Cleanup caches:
1) removed reference cache
2) use Ehcache provider by default
3) adjust cache status page to show cache statistics and flush Ehcaches

git-svn-id: svn://localhost/jahia/trunk@11042 69c369ed-ed09-0410-a4a1-e19a46c23626